# obs-plugins

iptech-filters/: CMakeLists.txt  background-key-filter.c  iptech-filters.c
iptech-filters/data/: background_key_filter.effect
iptech-filters/data/locale/: en-US.ini
oculus-mrc/: oculus-mrc.cpp
